--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "jquery": "2.1.4",
     "bootstrap": "3.3.5",
-    "jquery-ui-touch-punch": "*"
+    "jquery-ui-touch-punch": "*",
+    "jquery-ui": "*"
   }
 }
