--- a/bower.json
+++ b/bower.json
@@ -13,9 +13,10 @@
     "tests"
   ],
   "dependencies": {
-    "jquery": "2.1.4",
     "bootstrap": "3.3.5",
-    "jquery-ui-touch-punch": "*",
-    "jquery-ui": "*"
+    "jquery": "2.1.4",
+    "jquery-numeric": "~1.3.1",
+    "jquery-ui": "*",
+    "jquery-ui-touch-punch": "*"
   }
 }
