--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "jquery-numeric": "~1.3.1",
     "jquery-ui": "*",
     "jquery-ui-touch-punch": "*",
-    "bootstrap-multiselect": "https://github.com/davidstutz/bootstrap-multiselect.git#^0.9.13"
+    "bootstrap-multiselect": "https://github.com/davidstutz/bootstrap-multiselect.git#^0.9.13",
+    "devbridge-autocomplete": "~1.2.24"
   }
 }
