--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
   "require": {
     "laravel/framework": "5.0.*",
     "illuminate/html": "5.*",
-    "barryvdh/laravel-debugbar": "^2.1"
+    "predis/predis": "^1.0"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.0",
