--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,7 @@
   "type": "project",
   "require": {
     "laravel/framework": "5.0.*",
-    "illuminate/html": "5.*",
-    "predis/predis": "^1.0"
+    "illuminate/html": "5.*"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.0",
